--- a/www/app/global.css
+++ b/www/app/global.css
@@ -5,3 +5,6 @@
 body {
     cursor: url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20width='26'%20height='31'%20fill='none'%20viewBox='0%200%2026%2031'%3E%3Cpath%20fill='%23fff'%20fill-rule='evenodd'%20stroke='%23010101'%20stroke-linecap='square'%20stroke-width='2.5'%20d='M21.993%2014.425%202.549%202.935l4.444%2023.108%204.653-10.002%2010.347-1.616Z'%20clip-rule='evenodd'/%3E%3C/svg%3E"), grab;
 }
+.cinematics {
+    border-radius: 1.5rem !important;
+}
